out/old/manifests/service-portal/Deployment.service-portal.yaml
metadata:
  name: service-portal
  namespace: service-portal
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"service-portal:service-portal","ingressName":"service-portal:service-portal-ingress","hostname":"service-portal.<COMPANY_DOMAIN>","path":"/","allNodes":false}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-portal
  template:
    metadata:
      labels:
        app: service-portal
    spec:
      containers:
      - name: service-portal
        image: artifactory.<COMPANY><DOMAIN_14>:30807/docker-local/service-portal/prd/service-portal_eb2d1d5
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
      - name: secret-registry-image
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
apiVersion: apps/v1
kind: Deployment
