out/old/manifests/service-portal/Service.service-portal.yaml
metadata:
  name: service-portal
  namespace: service-portal
spec:
  ports:
  - name: service-portal
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: service-portal
  clusterIP: <IP_105>
  type: ClusterIP
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
