out/old/manifests/service-portal/Ingress.service-portal-ingress.yaml
metadata:
  name: service-portal-ingress
  namespace: service-portal
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"service-portal:service-portal","ingressName":"service-portal:service-portal-ingress","hostname":"service-portal.<COMPANY_DOMAIN>","path":"/","allNodes":false}]'
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/client-max-body-size: 25m
    nginx.ingress.kubernetes.io/configuration-snippet: 'proxy_set_header Upgrade $http_upgrade;

      proxy_set_header Connection "upgrade";

      proxy_cache_bypass $http_upgrade;

      '
    nginx.ingress.kubernetes.io/proxy-body-size: 25m
    nginx.ingress.kubernetes.io/proxy-http-version: '1.1'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
spec:
  ingressClassName: nginx
  rules:
  - host: service-portal.<COMPANY_DOMAIN>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-portal
            port:
              number: 80
apiVersion: <DOMAIN_775>/v1
kind: Ingress
